// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSince renders 24 hour clock 1`] = `
<time
  datetime="2017-10-15T01:41:20.000Z"
  title="October 14 2017 21:41:20 "
>
  2 days ago
</time>
`;

exports[`TimeSince renders default 1`] = `
<time
  datetime="2017-10-15T01:41:20.000Z"
  title="October 14, 2017 9:41 PM "
>
  2 days ago
</time>
`;
